client/stylus/app.styl
@import "color.styl"
@import "sizes.styl"
@import "typography.styl"

.container
  position relative
  display flex
  flex 1
  flex-direction: row
  overflow: hidden

  & > .content
    flex 1
    padding: 1rem
    position relative

    @media all and (min-width: size-large) {
      padding: 2rem
    } 

    .contentInner
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      overflow: auto; 
      padding: inherit

      &::after  // needed as flex doesn't include padding in height calc
        content: '';
        padding: inherit;
        padding-top: 0
        display block

